--- a/com.example.app.web/css/main_gallery.css
+++ b/com.example.app.web/css/main_gallery.css
@@ -2,10 +2,12 @@ body {
     width: 100%;
     background-image: url("../image/back.jpg");
     background-size: 100%;
+    margin:  0 !important ;
 }
+
 .gallery{
-    margin-bottom: 30px;
     width: 100%;
+    margin-bottom: 30px;
 }
 .gallery__title{
     font-weight: bold;
@@ -13,14 +15,13 @@ body {
     font-size: 42px;
     text-align: center;
     color: azure;
-    margin: 0 0 25px 0;
+    margin: 15px 0 25px 0;
 }
 
 .gallery__container{
-    width: 100%;
     display: flex;
     flex-direction:column;
-
+    width: 100%;
 }
 
 .block div{
@@ -43,7 +44,8 @@ img{
 }
 
 .block {
-    width: 100%;
     display:flex;
     justify-content:  space-around;
+    width: 100%;
 }
+
